fix: button spacing

--- a/src/components/GameFooter/GameFooter.css
+++ b/src/components/GameFooter/GameFooter.css
@@ -1,7 +1,7 @@
 .GameFooter {
   height: 80px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: flex-start;
   align-self: stretch;
 }
